--- a/s/extensions1.json
+++ b/s/extensions1.json
@@ -2,7 +2,7 @@
   "secuses": true,
   "results": [
     {
-      "title": "Популярные",
+      "title": "Популярные TVMY",
       "results": [
 		{
 		"name": "Онлайн Мод",
