--- a/s/extensions1.json
+++ b/s/extensions1.json
@@ -2,7 +2,7 @@
   "secuses": true,
   "results": [
     {
-      "title": "Популярные TVMY (t.me/tvmy2)",
+      "title": "Популярные TVMY [t.me/tvmy2]",
       "results": [
 		{
 		"name": "Онлайн Мод",
