--- a/s/extensions.json
+++ b/s/extensions.json
@@ -12,10 +12,10 @@
 		"available_lampa": 1
 		},
 		{
-		"name": "BwaRC !",
-		 "author": "@bwato",
-		"link": "http://bwa.to/rc",
-		"descr": "Новая версия. Фильмы и сериалы в онлайн. Нужна поддержка WebAssembly и версия Chrome > 80",
+		"name": "Z1 Онлайн",
+		"author": "@z1",
+		"link": "http://z01.online/live",
+		"descr": "Фильмы и сериалы онлайн без подписки и очень удобно.",
 		"available_lampa": 1
 		},
 		{
